# youtube_scraper

./: .gitignore  cobweb.project.jsonc  pypdup.toml  pyproject.toml  settings.jsonc
.data/: __rejected_urls__.csv  script[0].js  script[1].js  script[3].js  video_data.csv
.dist/: pycobweb-0.0.2-py3-none-any.whl
src/youtube_scraper/: bot.py  main.py
src/youtube_scraper/callbacks/: scrape_comments.py  scrape_details.py
src/youtube_scraper/schemas/: video.py
src/youtube_scraper/utils/: clean.py
