[tool.poetry]
name = "youtube_scraper"
version = "0.1.0"
description = ""
authors = ["Akhil H Nair <aklhnrpm@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pycobweb = {path = ".dist/pycobweb-0.0.2-py3-none-any.whl"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
